<resources>
    <string name="app_name">Music-app</string>
    <string name="ten_dang_nhap">Tên đăng nhập</string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="quen_mat_khau">Quên mật khẩu?</string>
    <string name="xac_nhan_mat_khau">Xác nhận mật khẩu</string>
    <string name="dong_y">Đồng ý</string>
    <string name="dang_ki">Đăng kí</string>
    <string name="back_toLogin">Quay lại</string>
    <string name="dang_nhap">Đăng nhập</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>